[gd_scene load_steps=7 format=3 uid="uid://c3y75nh3t7mkl"]

[ext_resource type="Texture2D" uid="uid://64xdi55ithqq" path="res://Assets/Sprites/Left_Curtain.png" id="1_1ydln"]
[ext_resource type="Script" path="res://start_menu.gd" id="1_lquxl"]
[ext_resource type="Texture2D" uid="uid://c6ti0oshm7cj8" path="res://Assets/Sprites/Right_Curtain.png" id="2_a71gf"]
[ext_resource type="Texture2D" uid="uid://dli8ao3tpwxb2" path="res://Assets/icon.svg" id="3_ysjac"]

[sub_resource type="LabelSettings" id="LabelSettings_t8xvh"]
font_size = 100

[sub_resource type="Environment" id="Environment_swh4b"]
background_mode = 2
ambient_light_source = 1
reflected_light_source = 1

[node name="Start_Menu" type="Node3D"]
script = ExtResource("1_lquxl")

[node name="LeftCurtain" type="Sprite3D" parent="."]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, -6.50232, 5.748, 3.709)
modulate = Color(0.517647, 0.517647, 0.517647, 1)
shaded = true
alpha_cut = 2
texture = ExtResource("1_1ydln")

[node name="RightCurtain" type="Sprite3D" parent="."]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 6.69792, 5.748, 3.709)
modulate = Color(0.517647, 0.517647, 0.517647, 1)
shaded = true
alpha_cut = 2
texture = ExtResource("2_a71gf")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -104.0
offset_top = 112.0
offset_right = 106.0
offset_bottom = 249.0
grow_horizontal = 2
text = "Title"
label_settings = SubResource("LabelSettings_t8xvh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.474826
anchor_top = 0.497685
anchor_right = 0.474826
anchor_bottom = 0.497685
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
theme_override_constants/separation = 4
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Start_Button" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Setting_Button" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="End_Button" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="TVHost" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(922, 154)
texture = ExtResource("3_ysjac")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.664, 11.7913)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_swh4b")

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.90506, 10.5272)
light_energy = 16.0
spot_range = 46.1253
spot_angle = 67.5

[connection signal="pressed" from="CanvasLayer/VBoxContainer/Start_Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Setting_Button" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/End_Button" to="." method="_on_end_button_pressed"]
