extends Node3D


@onready var start = $CanvasLayer/VBoxContainer/Start_Button
@onready var settings = $CanvasLayer/VBoxContainer/Setting_Button
@onready var end = $CanvasLayer/VBoxContainer/End_Button

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass

func _on_start_button_pressed():
	pass # Replace with function body.


func _on_setting_button_pressed():
	pass # Replace with function body.


func _on_end_button_pressed():
	pass # Replace with function body.
